adjust dark red color in dark mode and add partner hint

--- a/app/globals.css
+++ b/app/globals.css
@@ -36,6 +36,7 @@
     --chart-5: 27 87% 67%;
     --radius: 0.5rem;
     --dark-red: 354 80% 46%;
+    --maroon: 342, 100%, 30%;
 
     --maroon: #98002E;
     --orange: #ff8743;
@@ -70,6 +71,7 @@
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
     --chart-5: 340 75% 55%;
+    --dark-red: 354 80% 34%;
   }
 }
 
